Modify ca.conf and create kubeconfig files for kubelets of node-0 and node-1

--- a/conf/ca.conf
+++ b/conf/ca.conf
@@ -80,7 +80,7 @@ subjectKeyIdentifier =hash
 nsCertType           = client
 nsComment            = "Node-0 Certificate"
 # subjectAltName(SAN) は　一つの主体の別名です。CNの補足みたいな物です。
-subjectAltName       = IP:192.168.119.135, DNS:kubernetes.node-0.local, DNS:node-0
+subjectAltName       = IP:192.168.119.135, DNS:node-0
 
 [node-1]
 distinguished_name = node-1_distinguished_name
@@ -102,32 +102,123 @@ subjectKeyIdentifier =hash
 nsCertType           = client
 nsComment            = "Node-1 Certificate"
 # subjectAltName(SAN) は　一つの主体の別名です。CNの補足みたいな物です。
-subjectAltName       = IP:192.168.119.136, DNS:kubernetes.node-1.local, DNS:node-1
+subjectAltName       = IP:192.168.119.136, DNS:node-1
 
-[kubeproxy]
-req_distinguished_name = kubeproxy_req_distinguished_name
+[kube-proxy]
+distinguished_name = kube-proxy_distinguished_name
 prompt = no
-req_extensions = kubeproxy_req_extensions
+req_extensions = kube-proxy_req_extensions
 
-[kubeproxy_req_distinguished_name]
+[kube-proxy_distinguished_name]
 C = JP
 ST = Kyoto
 L = Kyoto
 O = system:node-proxier
-CN = system:node-proxy
+CN = system:kube-proxy
 
-[kubeproxy_req_extensions]
+[kube-proxy_req_extensions]
 basicConstraints     =CA:FALSE
-# clientAuth：kubeproxyはAPI　serverに接続してserviceなどのネットワーク情報知る必要があります
-# serverAuth: kubernetesはヘルス情報とメトリクス情報などをPrometheusなどの監視ツールに提供するため、いくつかのポートを公開しています。
+# clientAuth：kube-proxyはAPI　serverに接続してserviceなどのネットワーク情報知る必要があります
+# serverAuth: kube-proxyはヘルス情報とメトリクス情報などをPrometheusなどの監視ツールに提供するため、いくつかのポートを公開しています。
 # これらのポートへのアクセスもセキュリティを上げるために、HTTPSを使う場合があります。それで、ここでserverAuthも追加しました。
-extendedKeyUsage     =clientAuth, serverAuth
-keyUsage             =critical, digitalSignature, keyEncipherment
-subjectKeyIdentifier =hash
+extendedKeyUsage     = clientAuth, serverAuth
+keyUsage             = critical, digitalSignature, keyEncipherment
+subjectKeyIdentifier = hash
 nsCertType           = client
-nsComment            = "Node-1 Certificate"
+nsComment            = "Kube Proxy Certificate"
 # subjectAltName(SAN) は　一つの主体の別名です。CNの補足みたいな物です。
-subjectAltName       = IP:127.0.0.1, DNS:kubernetes.node-1.local, DNS:node-1
+# 127.0.0.1は同じノードのプロセスからの接続のためです。監視ツールなどは普通違うノードで稼働します。
+subjectAltName       = IP:127.0.0.1, DNS:kube-proxy
+
+[kube-controller-manager]
+distinguished_name = kube-controller-manager_distinguished_name
+prompt = no
+req_extensions = kube-controller-manager_req_extensions
+
+[kube-controller-manager_distinguished_name]
+C = JP 
+ST = Kyoto
+L = Kyoto
+O = system:kube-controller-manager
+CN = system:kube-controller-manager
+
+[kube-controller-manager_req_extensions]
+basicConstraints     = CA:FALSE
+# kube-proxyと同じく、ヘルス情報とメトリクス情報などをPrometheusなどの監視ツールに提供するため、いくつかのポートを公開しています。
+extendedKeyUsage     = clientAuth, serverAuth
+keyUsage             = critical, digitalSignature, keyEncipherment
+# 127.0.0.1は普通API serverなど同じノードにあるプロセスからの接続のためで、監視ツールは普通他のノードで稼働します。
+subjectAltName       = DNS: kube-controller-manager, IP: 127.0.0.1
+nsCertType           = client
+nsComment            = "Kube-controller-manager Certificate"
+subjectKeyIdentifier = hash
+
+[kube-scheduler]
+distinguished_name = kube-scheduler_distinguished_name
+prompt = no
+req_extensions = kube-scheduler_req_extensions
+
+[kube-scheduler_distinguished_name]
+C   = JP
+ST  = Kyoto
+L   = Kyoto
+O   = system:kube-scheduler
+CN  = system:kube-scheduler
+
+[kube-scheduler_req_extensions]
+basicConstraints     = CA:FALSE
+extendedKeyUsage     = clientAuth, serverAuth
+keyUsage             = critical, digitalSignature, keyEncipherment
+subjectAltName       = IP: 127.0.0.1, DNS: kube-scheduler
+subjectKeyIdentifier = hash
+nsCertType           = client
+nsComment            = "Kube Scheduler Certificate"
+
+
+# API Server
+#
+# The Kubernetes API server is automatically assigned the `kubernetes`
+# internal dns name, which will be linked to the first IP address (`10.32.0.1`)
+# from the address range (`10.32.0.0/24`) reserved for internal cluster
+# services.
+
+[kube-api-server]
+distinguished_name = kube-api-server_distinguished_name
+prompt             = no
+req_extensions     = kube-api-server_req_extensions
+
+[kube-api-server_distinguished_name]
+C = JP
+ST = Kyoto
+L = Kyoto
+CN = kubernetes
+
+[kube-api-server_req_extensions]
+basicConstraints     = CA:FALSE
+extendedKeyUsage     = clientAuth, serverAuth
+keyUsage             = critical, digitalSignature, keyEncipherment
+nsCertType           = client, server
+nsComment            = "Kube API Server Certificate"
+subjectAltName       = @kube-api-server_alt_names
+subjectKeyIdentifier = hash
+
+[kube-api-server_alt_names]
+IP.0  = 127.0.0.1
+IP.1  = 10.32.0.1
+# ここのkubernetesはserviceの名前
+# kubernetesという名前のserviceは全てのクラスタにデフォルトに作られます
+# ここのdefaultはnamespace名。クラスタにはdefaultという名前のnamespaceが最初から存在します。
+DNS.0 = kubernetes
+DNS.1 = kubernetes.default
+# svc:これはserviceの名前解決という標識
+DNS.2 = kubernetes.default.svc
+DNS.3 = kubernetes.default.svc.cluster
+DNS.4 = kubernetes.svc.cluster.local
+# 
+DNS.5 = server.kubernetes.local
+DNS.6 = api-server.kubernetes.local
+
+
 
 
 
